--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "type-of-is": "^3.4.0"
   },
   "devDependencies": {
+    "coffee-script": "^1.10.0",
     "grunt": "^0.4.5",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-watch": "^0.6.1",
