--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "license": "substanceware",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --recursive --no-timeouts --compilers coffee:coffee-script/register --ui exports ./tests"
+    "test": "./node_modules/.bin/mocha --recursive --no-timeouts --compilers coffee:coffee-script/register --ui exports ./tests",
+    "build": "./node_modules/.bin/grunt build",
+    "watch": "./node_modules/.bin/grunt watch"
   },
   "author": {
     "name": "Stephen Handley",
@@ -13,11 +15,13 @@
     "url": "http://person.sh"
   },
   "dependencies": {
+    "grunt-cli": "^1.2.0",
     "type-of-is": "^3.4.0"
   },
   "devDependencies": {
     "coffee-script": "^1.10.0",
     "grunt": "^0.4.5",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-coffee": "^0.13.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-docco": "^0.4.0",
