--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "cntxt",
-  "version": "3.0.0",
+  "version": "4.0.0",
   "description": "Pipeline context",
   "license": "substanceware",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --recursive --no-timeouts --compilers coffee:coffee-script/register --ui exports ./tests",
-    "build": "./node_modules/.bin/grunt build",
-    "watch": "./node_modules/.bin/grunt watch"
+    "test": "./node_modules/.bin/mocha --recursive --no-timeouts --compilers coffee:coffee-script/register --ui exports ./tests"
   },
   "author": {
     "name": "Stephen Handley",
@@ -15,16 +13,9 @@
     "url": "http://person.sh"
   },
   "dependencies": {
-    "grunt-cli": "^1.2.0",
-    "type-of-is": "^3.4.0"
+    "type-of-is": "3.4.0"
   },
   "devDependencies": {
-    "coffee-script": "^1.10.0",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^1.2.0",
-    "grunt-contrib-coffee": "^0.13.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-docco": "^0.4.0",
-    "mocha": "^2.3.2"
+    "mocha": "2.3.2"
   }
 }
