--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "repository": {
     "type" : "git",
     "url" : "https://github.com/npm/cli.git"
+  },
+  "engines": {
+    "node": ">= 10.12.0"
   }
 }
